// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RandomBeersWidget > shows 2 error messages 1`] = `
<div>
  <aside
    class="c-hTSGOD"
  >
    <div
      class="c-bQpehp"
      data-testid="error-state"
    >
      <button
        class="c-eqmden"
      >
        Retry
      </button>
    </div>
    <div
      class="c-bQpehp"
      data-testid="error-state"
    >
      <button
        class="c-eqmden"
      >
        Retry
      </button>
    </div>
  </aside>
</div>
`;

exports[`RandomBeersWidget > shows 2 loading beers 1`] = `
<div>
  <aside
    class="c-hTSGOD"
  >
    <div
      aria-busy="true"
      class="c-catuKv"
      data-testid="loading-state"
    />
    <div
      aria-busy="true"
      class="c-catuKv"
      data-testid="loading-state"
    />
  </aside>
</div>
`;

exports[`RandomBeersWidget > shows 2 random beers 1`] = `
<div>
  <aside
    class="c-hTSGOD"
  >
    <article
      class="c-CVkVn"
    >
      <a
        href="/beers/1"
      >
        <img
          alt="name_1"
          src="/image_url_1"
        />
        <h2>
          name_1
        </h2>
        <time>
          first_brewed_1
        </time>
      </a>
    </article>
    <article
      class="c-CVkVn"
    >
      <a
        href="/beers/2"
      >
        <img
          alt="name_2"
          src="/image_url_2"
        />
        <h2>
          name_2
        </h2>
        <time>
          first_brewed_2
        </time>
      </a>
    </article>
  </aside>
</div>
`;
